--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,3 +37,22 @@ code {
   width: 14em;
 }
 
+.experience-container {
+  margin: 0 0.3em;
+  padding: 0;
+}
+
+.experience-row {
+  list-style: none;
+  margin: 1em 0;
+  border-style: solid;
+}
+
+.experience-navlink {
+  display: flex;
+}
+
+.experience-image {
+  height: 10em;
+  width: 10em;
+}
