user can click on map marker to display an infowindow that has the title and image for that experience

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,12 @@ code {
 #map{
   height: 400px;
 }
+
+.info-window-image {
+  height: 10em;
+  width: 10em;
+}
+
 .contribute-screen{
   height: 100%;
   width: 100%;
