added simple styling to make nav bar easier to read and navigate for development purposes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,14 @@ code {
     monospace;
 }
 
+.nav-bar {
+  margin: 0.75em;
+}
+
+.nav-bar-link {
+  margin: 0 0.75em;
+}
+
 #map{
   height: 400px;
 }
