--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,13 +23,20 @@ code {
 
 #map{
   height: 400px;
+  margin: 2.5% 5%;
 }
 #details-map{
   height: 400px;
 }
+
+.info-window-header {
+  margin: 0.5em 0;
+  text-align: center;
+}
+
 .info-window-image {
-  height: 10em;
-  width: 10em;
+  height: 100%;
+  width: 100%;
 }
 
 .contribute-screen{
@@ -54,28 +61,69 @@ code {
 }
 
 .experience-container {
-  margin: 0 0.3em;
+  margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  align-items: center;
 }
 
 .experience-row {
   list-style: none;
-  margin: 1em 0;
+  margin: 2.5% 5%;
+  padding: 2%;
   border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  /* width: 48%; */
+  box-sizing: border-box;
+  width: 90%;
+  box-shadow: 3px 2px 10px black;
 }
 
 .experience-navlink {
   display: flex;
   text-decoration: none;
   color: black;
+  flex-direction: column;
+  padding: 2%;
 }
 
 .experience-image {
-  height: 10em;
-  width: 10em;
+  height: 100%;
+  width: 100%;
+  box-shadow: 3px 2px 10px black;
+}
+
+.experience-title {
+  text-align: center;
+  margin: 0.5em 0;
 }
 
 .details-image {
   height: 20em;
   width: 20em;
+}
+
+@media only screen and (min-width: 768px) {
+  #map{
+    margin: 2%;
+  }
+
+  .experience-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .experience-row {
+    width: 46%;
+    margin: 2%;
+    padding: 1%;
+  }
+
+  .experience-navlink {
+    padding: 1%;
+  }
+
 }
