--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,7 +75,22 @@ code {
   width: 10em;
 }
 
-.details-image {
-  height: 20em;
-  width: 20em;
+.info-section-details-screen {
+  margin: 2.5% 5% 5% 5%;
 }
+
+.details-header {
+  margin: 2.5% 0;
+}
+
+.details-data {
+  margin: 2.5% 0;
+  padding-left: 5%;
+}
+
+.details-image {
+  height: 100%;
+  width: 100%;
+  margin: 2.5% 0 5% 0;
+}
+
