--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,12 @@ code {
 }
 
 .nav-bar {
-  margin: 0.75em;
+  padding: 0.75em;
+  background-color: rgb(241, 91, 36);
+}
+
+.nav-bar-welcome-header {
+  display: inline;
 }
 
 .nav-bar-link {
