--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,11 @@ code {
 
 .nav-bar-link {
   margin: 0 0.75em;
+  color: black;
+}
+
+.nav-bar-logged-in-container {
+  display: inline;
 }
 
 #map{
@@ -155,6 +160,15 @@ code {
 
 .login-submit-button {
   margin: 2.5% 0;
+}
+
+.logout-button {
+  background-color: transparent;
+  border-style: none;
+  text-decoration: underline;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 1em;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 768px) {
