--- a/client/src/index.css
+++ b/client/src/index.css
@@ -197,3 +197,10 @@ code {
     margin: 1% 0;
   }
 }
+
+@media only screen and (min-width: 1024px) {
+  #map {
+    width: 60%;
+    margin: 0 20%;
+  }
+}
