--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,6 +95,7 @@ code {
   box-sizing: border-box;
   width: 90%;
   box-shadow: 3px 2px 10px black;
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .experience-navlink {
@@ -180,7 +181,7 @@ code {
 
 @media only screen and (min-width: 768px) {
   #map{
-    margin: 2%;
+    margin: 2.5% 2% 1% 2%;
   }
 
   .experience-container {
@@ -196,6 +197,15 @@ code {
 
   .experience-navlink {
     padding: 1%;
+  }
+
+  .details-header {
+    margin: 1% 0;
+  }
+
+  .details-data {
+    margin: 1% 0 1.5% 0;
+    padding-left: 2.5%;
   }
 
   .login-screen-header {
@@ -220,6 +230,6 @@ code {
 @media only screen and (min-width: 1024px) {
   #map {
     width: 60%;
-    margin: 0 20%;
+    margin: 2.5% 20% 1% 20%;
   }
 }
