--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,8 +32,23 @@ code {
   display: inline;
 }
 
+.logo-container {
+  height: 40%;
+  width: 100%;
+  padding: 2.5% 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.logo {
+  height: 40%;
+  width: 40%;
+  align-self: center;
+}
+
 #map{
-  height: 400px;
+  height: 350px;
   margin: 2.5% 5%;
   border-radius: 10px;
   box-shadow: 3px 2px 10px black;
@@ -180,6 +195,16 @@ code {
 }
 
 @media only screen and (min-width: 768px) {
+
+  .logo-container {
+    padding: 1.5% 0 0 0;
+  }
+
+  .logo {
+    height: 30%;
+    width: 30%;
+  }
+
   #map{
     margin: 2.5% 2% 1% 2%;
   }
@@ -228,8 +253,18 @@ code {
 }
 
 @media only screen and (min-width: 1024px) {
+
+  .logo-container {
+    padding: 0.5% 0 0 0;
+  }
+
+  .logo {
+    height: 20%;
+    width: 20%;
+  }
+
   #map {
     width: 60%;
-    margin: 2.5% 20% 1% 20%;
+    margin: 1.5% 20% 0 20%;
   }
 }
