--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,7 +74,7 @@ code {
   width: 100%;
 }
 .contribute-form{
-  margin: 2em;
+  margin: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,12 +82,21 @@ code {
 }
 
 .form-item{
-  margin:1em;
+  margin:2em;
+}
+
+.contribute-title-input{
+  height: 4em;
+  width: 60%;
+  border-radius: 10px;
+  box-shadow: 3px 2px 10px black;
 }
 
 .contribute-description-input{
-  height: 8em;
-  width: 14em;
+  height: 14em;
+  width: 60%;
+  border-radius: 10px;
+  box-shadow: 3px 2px 10px black;
 }
 
 .experience-container {
@@ -325,4 +334,13 @@ code {
     width: 60%;
     margin: 1.5% 20% 0 20%;
   }
+}
+.contribute-title-input{
+  height: 4em;
+  width: 55%; 
+}
+
+.contribute-description-input{
+  height: 14em;
+  width: 60%;
 }
