--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,21 +15,49 @@ code {
 }
 
 .nav-bar {
-  padding: 0.75em;
+  padding: 0.75%;
   background-color: rgb(241, 91, 36);
 }
 
 .nav-bar-welcome-header {
   display: inline;
+  margin: 2% 0;
+  text-align: center;
+}
+
+.nav-bar-links-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 0;
 }
 
 .nav-bar-link {
-  margin: 0 0.75em;
+  width: 9em;
+  font-size: 0.95em;
+  text-align: center;
+  margin: 1.5% 0.5%;
   color: black;
+  padding: 1.5% 2%;
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(175, 221, 233, 0.85);
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
 }
 
 .nav-bar-logged-in-container {
-  display: inline;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-bar-logged-out-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 0;
 }
 
 .logo-container {
@@ -221,15 +249,20 @@ code {
 }
 
 .logout-button {
-  background-color: transparent;
-  border-style: none;
-  text-decoration: underline;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  font-size: 1em;
+  font-size: 0.95em;
+  width: 9em;
   cursor: pointer;
 }
 
 @media only screen and (min-width: 768px) {
+
+  .nav-bar-link {
+    margin: 0;
+    padding: 0.5% 0.2%;
+    border-width: 2px;
+    border-radius: 8px;
+  }
 
   .logo-container {
     padding: 1.5% 0 0 0;
