--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,14 +87,33 @@ code {
   box-shadow: 3px 2px 10px black;
 }
 
+#content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.info-window-anchor {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em 0.75em 0.75em 0.25em;
+}
+
 .info-window-header {
-  margin: 0.5em 0;
+  margin: 0 0 0.25em 0;
   text-align: center;
+  color: black;
+  text-decoration: none;
+  font-size: 1em;
 }
 
 .info-window-image {
   height: 100%;
   width: 100%;
+  border-radius: 10px;
+  box-shadow: 3px 2px 10px black;
 }
 
 .contribute-screen{
@@ -289,6 +308,22 @@ code {
 
   #map{
     margin: 2.5% 2% 1% 2%;
+  }
+
+  .info-window-anchor {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0.5em 0.25em 0.5em 0.25em;
+  }
+
+  .info-window-header {
+    align-self: center;
+    font-size: 1.3em;
+  }
+
+  .info-window-image {
+    height: 40%;
+    width: 40%;
   }
 
   .experience-container {
