--- a/client/src/index.css
+++ b/client/src/index.css
@@ -157,7 +157,8 @@ code {
 
 .experience-row {
   list-style: none;
-  margin: 2.5% 5%;
+  margin: 2%;
+  /* padding: 4% 2% 12% 2%; */
   padding: 2%;
   border-style: solid;
   border-width: thin;
@@ -165,28 +166,45 @@ code {
   /* width: 48%; */
   box-sizing: border-box;
   width: 90%;
+  /* width: 46%; */
+  height: 15em;
   box-shadow: 3px 2px 10px black;
   background-color: rgba(255, 255, 255, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .experience-navlink {
+  width: 100%;
+  height: 100%;
   display: flex;
   text-decoration: none;
   color: black;
   flex-direction: column;
   padding: 2%;
+  box-sizing: border-box;
+}
+
+.experience-image-container {
+  height: 70%;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .experience-image {
   height: 100%;
   width: 100%;
+  object-fit: cover;
   box-shadow: 2px 1px 8px black;
   border-radius: 10px;
 }
 
 .experience-title {
   text-align: center;
-  margin: 0.5em 0;
+  margin: 4% 0;
+  height: 26%
 }
 
 .info-section-details-screen {
@@ -334,7 +352,11 @@ code {
   .experience-row {
     width: 46%;
     margin: 2%;
-    padding: 1%;
+    padding: 2% 2% 8% 2%;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 23em;
   }
 
   .experience-navlink {
